force-app/main/default/objects/Linked_Category__c/Linked_Category__c.object-meta.xml
<CustomObject>
    <label>Linked Category</label>
    <nameField>
        <displayFormat>LC-{00000}</displayFormat>
        <label>Linked Category ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Linked Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>