force-app/main/default/objects/Linked_Category__c/fields/Linked_Category_to_Library__c.field-meta.xml
<CustomField>
    <fullName>Linked_Category_to_Library__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Category to Library</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Documentation Library</relationshipLabel>
    <relationshipName>Linked_Categories1</relationshipName>
    <type>Lookup</type>
</CustomField>