force-app/main/default/objects/Linked_Category__c/fields/Linked_Category_to_Response__c.field-meta.xml
<CustomField>
    <fullName>Linked_Category_to_Response__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Category to Response</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Response Library</relationshipLabel>
    <relationshipName>Linked_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>