force-app/main/default/objects/Linked_Category__c/fields/Linked_Library_to_Categories__c.field-meta.xml
<CustomField>
    <fullName>Linked_Library_to_Categories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Library to Categories</label>
    <referenceTo>Library__c</referenceTo>
    <relationshipLabel>Categories</relationshipLabel>
    <relationshipName>Linked_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>