force-app/main/default/objects/Linked_Category__c/fields/Linked_Response_to_Categories__c.field-meta.xml
<CustomField>
    <fullName>Linked_Response_to_Categories__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Response to Categories</label>
    <referenceTo>Response_Library__c</referenceTo>
    <relationshipLabel>Linked Categories</relationshipLabel>
    <relationshipName>Linked_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>